--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,16 +26,27 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/reloadButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:background="#FFFFFF"
-            android:contentDescription="@string/reload_image_button_description"
+            android:contentDescription="@string/reload_button_description"
             android:src="@drawable/baseline_refresh_36"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/settingButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:background="#FFFFFF"
+            android:contentDescription="@string/settings_button_description"
+            android:src="@drawable/baseline_settings_24"
+            app:layout_constraintEnd_toStartOf="@+id/reloadButton"
+            app:layout_constraintTop_toTopOf="@+id/reloadButton" />
 
         <TextView
             android:id="@+id/areaTitle"
@@ -102,23 +113,6 @@
             app:layout_constraintStart_toEndOf="@+id/weatherTodayIcon"
             app:layout_constraintTop_toTopOf="@+id/weatherTodayIcon" />
 
-<!--        <Button-->
-<!--            android:id="@+id/weatherTodayButton"-->
-<!--            style="@style/Widget.Material3.Button.TextButton"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:gravity="center"-->
-<!--            android:text="@string/main_weather_today_temperature"-->
-<!--            app:icon="@drawable/baseline_cloud_48"-->
-<!--            app:iconGravity="start"-->
-<!--            android:paddingStart="24dp"-->
-<!--            android:paddingEnd="24dp"-->
-<!--            android:textAllCaps="false"-->
-<!--            app:layout_constraintEnd_toEndOf="@+id/todayTitle"-->
-<!--            app:layout_constraintHorizontal_bias="0.0"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/areaTitle"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/todayTitle" />-->
-
         <ImageView
             android:id="@+id/weatherTomorrowIcon"
             android:layout_width="48dp"
@@ -136,7 +130,19 @@
             app:layout_constraintStart_toEndOf="@+id/weatherTomorrowIcon"
             app:layout_constraintTop_toTopOf="@+id/weatherTomorrowIcon" />
 
-        <!--        <Button-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/verticalRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/areaButton" />
+
+<!--        <Button-->
 <!--            android:id="@+id/weatherTomorrowButton"-->
 <!--            style="@style/Widget.Material3.Button.TextButton"-->
 <!--            android:layout_width="0dp"-->
@@ -150,38 +156,6 @@
 <!--            app:layout_constraintEnd_toEndOf="parent"-->
 <!--            app:layout_constraintStart_toEndOf="@+id/weatherTodayButton"-->
 <!--            app:layout_constraintTop_toBottomOf="@+id/tomorrowTitle" />-->
-
-<!--    <androidx.appcompat.widget.LinearLayoutCompat-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/weatherTodayButton"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent">-->
-
-<!--        <androidx.viewpager.widget.ViewPager-->
-<!--            android:id="@+id/pager"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent">-->
-
-<!--            <com.google.android.material.tabs.TabLayout-->
-<!--                android:id="@+id/tab_layout"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:tabIndicatorColor="#FF0000"-->
-<!--                app:tabTextColor="#000000"-->
-<!--                app:tabSelectedTextColor="#00FF00">-->
-
-<!--                <com.google.android.material.tabs.TabItem-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"/>-->
-
-<!--                <com.google.android.material.tabs.TabItem-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"/>-->
-
-<!--            </com.google.android.material.tabs.TabLayout>-->
-<!--        </androidx.viewpager.widget.ViewPager>-->
-<!--    </androidx.appcompat.widget.LinearLayoutCompat>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
