ニュース取得方法の修正

--- a/app/src/main/res/layout/news_list_horizontal_item.xml
+++ b/app/src/main/res/layout/news_list_horizontal_item.xml
@@ -9,14 +9,24 @@
         </variable>
     </data>
     <androidx.cardview.widget.CardView
-        android:layout_width="160dp"
-        android:layout_height="140dp"
+        android:layout_width="150dp"
+        android:layout_height="210dp"
         android:layout_margin="4dp"
         app:cardCornerRadius="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/thumbnail"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:imageUrl="@{data.imageUrl}" />
 
             <TextView
                 android:id="@+id/title"
@@ -26,14 +36,12 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
                 android:ellipsize="end"
-                android:lines="4"
+                android:lines="3"
                 android:text="@{data.title}"
-                app:layout_constraintBottom_toTopOf="@+id/author"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/thumbnail" />
 
             <TextView
                 android:id="@+id/author"
@@ -53,18 +61,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
-                android:text="@{data.publishedAt}"
+                app:convertDate="@{data.datePublished}"
                 android:textSize="8sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/title" />
 
-            <ImageView
-                android:id="@+id/newIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/baseline_fiber_new_24" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
