--- a/app/src/main/res/layout/news_list_horizontal_item.xml
+++ b/app/src/main/res/layout/news_list_horizontal_item.xml
@@ -16,6 +16,9 @@
         android:layout_width="150dp"
         android:layout_height="210dp"
         android:layout_margin="4dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
         android:onClick="@{() -> viewModel.onClickNewsItem(data)}"
         app:cardCornerRadius="8dp">
 
