--- a/app/src/main/res/navigation/my_navigation.xml
+++ b/app/src/main/res/navigation/my_navigation.xml
@@ -40,5 +40,14 @@
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.woodny.weathernewsapplication.ui.fragment.SettingsFragment"
-        android:label="SettingsFragment" />
+        android:label="SettingsFragment" >
+        <action
+            android:id="@+id/action_settingsFragment_to_licenseFragment"
+            app:destination="@id/licenseFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/licenseFragment"
+        android:name="com.woodny.weathernewsapplication.ui.fragment.LicenseFragment"
+        android:label="fragment_license"
+        tools:layout="@layout/fragment_license" />
 </navigation>
