--- a/app/src/main/res/navigation/my_navigation.xml
+++ b/app/src/main/res/navigation/my_navigation.xml
@@ -42,12 +42,16 @@
         android:name="com.woodny.weathernewsapplication.ui.fragment.SettingsFragment"
         android:label="SettingsFragment" >
         <action
-            android:id="@+id/action_settingsFragment_to_licenseFragment"
-            app:destination="@id/licenseFragment" />
+            android:id="@+id/action_settingsFragment_to_commonWebFragment"
+            app:destination="@id/commonWebFragment" />
     </fragment>
     <fragment
-        android:id="@+id/licenseFragment"
-        android:name="com.woodny.weathernewsapplication.ui.fragment.LicenseFragment"
-        android:label="fragment_license"
-        tools:layout="@layout/fragment_license" />
+        android:id="@+id/commonWebFragment"
+        android:name="com.woodny.weathernewsapplication.ui.fragment.CommonWebFragment"
+        android:label="fragment_common_web"
+        tools:layout="@layout/fragment_common_web" >
+        <argument
+            android:name="url"
+            app:argType="string" />
+    </fragment>
 </navigation>
