--- a/app/src/main/res/xml/settings_preferences.xml
+++ b/app/src/main/res/xml/settings_preferences.xml
@@ -4,33 +4,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
-        app:title="設定画面"
+        app:title="@string/settings_title"
         android:layout="@layout/custom_preference_title">
 
         <Preference
-            app:title="アプリバージョン"
-            app:summary="1.0.0"
+            app:key="@string/key_app_version"
+            app:title="@string/app_version_title"
             android:layout="@layout/custom_preference_screen">
         </Preference>
 
         <Preference
             app:key="@string/key_terms_of_service"
-            app:title="利用規約"
-            app:summary="利用規約を表示します"
+            app:title="@string/terms_of_service_title"
+            app:summary="@string/terms_of_service_summary"
             android:layout="@layout/custom_preference_screen">
         </Preference>
 
         <Preference
             app:key="@string/key_privacy_policy"
-            app:title="プライバシーポリシー"
-            app:summary="プライバシーポリシーを表示します"
+            app:title="@string/privacy_policy_title"
+            app:summary="@string/privacy_policy_summary"
             android:layout="@layout/custom_preference_screen">
         </Preference>
 
         <Preference
             app:key="@string/key_license"
-            app:title="ライセンス"
-            app:summary="ライセンスを表示します"
+            app:title="@string/license_title"
+            app:summary="@string/license_summary"
             android:layout="@layout/custom_preference_screen">
         </Preference>
     </PreferenceCategory>
